update notebook 3 part 2 and fix typos

--- a/notebooks/3-advanced-usage-part-II.ipynb
+++ b/notebooks/3-advanced-usage-part-II.ipynb
@@ -21,11 +21,12 @@
     "\n",
     "### `validator` decorator\n",
     "\n",
-    "If custom validation is required above and beyond what Pydantic provides out of the box, the `validator` decorator may be used to create validation class methods as part of the Pydantic model defintion. For example, imagine we want to create a model representing a user, with fields for the user's given name, surname, username, and passwords from two separate passwrod creation inputs. We may want to impose the following restrictions:\n",
+    "If custom validation is required above and beyond what Pydantic provides out of the box, the `validator` decorator may be used to create validation class methods as part of the Pydantic model defintion. For example, imagine we want to create a model representing a user, with fields for the user's given name, surname, username, and passwords from two separate password creation inputs. We may want to impose the following restrictions:\n",
     "1. Username must contain only ascii characters\n",
     "1. Both provided passwords must be identical\n",
     "1. Given name and surname must be alphabetic characters only and must start with a capital letter\n",
-    "We can accomplish this using the following model"
+    "\n",
+    "We can accomplish this using the following model:"
    ]
   },
   {
@@ -135,9 +136,9 @@
     "* Validation methods can perform additional parsing of fields on top of any parsing automatically provided by Pydantic\n",
     "* Validation methods should either return the parsed value or raise one of `ValueError`, `TypeError`, or `AssertionError`\n",
     "\n",
-    "By default, `validator` will perform validation *after* other validation such as providing `\"hello\"` to an `int` field. But we can create validation methods that operator *before* other validation by using `pre=True` in the `validator` keyword arguments.\n",
+    "By default, `validator` will perform validation *after* other validation such as coercing `\"5\"` to an `int`. But we can create validation methods that operate *before* other validation by using `pre=True` in the `validator` keyword arguments.\n",
     "\n",
-    "`validator` also has a `each_item` keyword argument that will apply the method to each item of list-like field.\n",
+    "`validator` also has an `each_item` keyword argument that will apply the method to each item of a list-like field.\n",
     "\n",
     "Let's see `pre` and `each_item` in action...\n"
    ]
@@ -152,11 +153,8 @@
    },
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "\n",
-    "\n",
     "class Foo(BaseModel):\n",
-    "    positive_ints: List[int]\n",
+    "    positive_ints: list[int]\n",
     "\n",
     "    @validator(\"positive_ints\", pre=True)\n",
     "    def split_comma_separated_values(cls, positive_ints: Any) -> Any:\n",
@@ -171,9 +169,15 @@
     "        return item\n",
     "\n",
     "\n",
-    "display(Foo(positive_ints=(67.4, 2, True)))\n",
-    "display(Foo(positive_ints=\"2,4,6,8\"))\n",
-    "display(Foo(positive_ints=[\"-4\", 4, 0, 7]))"
+    "display(\n",
+    "    Foo(positive_ints=(67.4, 2, True)),\n",
+    ")\n",
+    "display(\n",
+    "    Foo(positive_ints=\"2,4,6,8\"),\n",
+    ")\n",
+    "display(\n",
+    "    Foo(positive_ints=[\"-4\", 4, 0, 7]),\n",
+    ")"
    ]
   },
   {
@@ -183,7 +187,7 @@
    "source": [
     "Notice the first example successfully converted `(67.4, 2, True)` into the list of integers `[67, 2, 1]`. And thanks to `pre=True`, the second example converted `\"2,4,6,8\"` to `[2, 4, 6, 8]`. Had we set `pre=False` or left the default value, the string `\"2,4,6,8\"` would have led to a validation error. The third example returns a validation error as the input list contains non-positive integers. The error message even tells us which indices of the input list are leading to the validation error.\n",
     "\n",
-    "Another default behavior of `validator` is to not validate fields when a value is not provided. But there may be scenarios where this is not the desired behavior. Let's see an example. Let's return to our `User` class from above. Let's create a `NewUser` class which is the same as the `User` class but contains an addition `created_at` field. This will take a `datetime` but be optional. When not supplied, the default value should be the current UTC time. A naive implementation might look like:"
+    "Another default behavior of `validator` is to not validate fields when a value is not provided. But there may be scenarios where this is not the desired behavior. Let's see an example. Let's return to our `User` class from above. Let's create a `NewUser` class which is the same as the `User` class but contains an additional `created_at` field. This will take an optional `datetime`. When not supplied, the default value should be the current UTC time. A naive implementation might look like:"
    ]
   },
   {
@@ -220,7 +224,7 @@
     "    created_at: datetime = datetime.utcnow()\n",
     "\n",
     "\n",
-    "print(f\"NewUser defined at  {datetime.utcnow()}\")\n",
+    "print(f\"NewUser class defined at:     {datetime.utcnow()}\")\n",
     "\n",
     "time.sleep(3)\n",
     "\n",
@@ -231,7 +235,7 @@
     "    given_name=\"joe\",\n",
     "    surname=\"davis\",\n",
     ")\n",
-    "print(f\"new_user created at {new_user.created_at}\")"
+    "print(f\"new_user instance created at: {new_user.created_at}\")"
    ]
   },
   {
@@ -239,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that despite occuring 3 seconds apart, the class definition and class instantiation are reporting as just milliseconds apart. We can solve this be creating a validation method where we set `always=True` in the `validator` keyword arguments. This proper implemention of this class looks like..."
+    "Notice that despite occurring 3 seconds apart, the class definition and class instantiation are reporting as just milliseconds apart. We can solve this by creating a validation method where we set `always=True` in the `validator` keyword arguments. A correct implemention of this class looks like..."
    ]
   },
   {
@@ -259,7 +263,7 @@
     "        return datetime.utcnow() if created_at is None else created_at\n",
     "\n",
     "\n",
-    "print(f\"NewUser defined at  {datetime.utcnow()}\")\n",
+    "print(f\"NewUser class defined at:     {datetime.utcnow()}\")\n",
     "\n",
     "time.sleep(3)\n",
     "\n",
@@ -270,7 +274,7 @@
     "    given_name=\"joe\",\n",
     "    surname=\"davis\",\n",
     ")\n",
-    "print(f\"new_user created at {new_user.created_at}\")"
+    "print(f\"new_user instance created at: {new_user.created_at}\")"
    ]
   },
   {
@@ -278,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we get the expected before that the `new_user` was created 3 seconds after the `NewUser` class was defined.\n",
+    "Now we get the expected behavior that the `new_user` was created 3 seconds after the `NewUser` class was defined.\n",
     "\n",
     "### `root_validator` decorator\n",
     "\n",
@@ -310,8 +314,12 @@
     "        return values\n",
     "\n",
     "\n",
-    "display(UserPassword(password1=\"1234\", password2=\"1234\"))\n",
-    "display(UserPassword(password1=\"1234\", password2=\"12345\"))"
+    "display(\n",
+    "    UserPassword(password1=\"1234\", password2=\"1234\"),\n",
+    ")\n",
+    "display(\n",
+    "    UserPassword(password1=\"1234\", password2=\"12345\"),\n",
+    ")"
    ]
   },
   {
@@ -393,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected we see no validation error andthe resulting `User` instance has several invalid values.\n",
+    "As expected we see no validation error and the resulting `User` instance has several invalid values.\n",
     "\n",
     "### `Config` type validation settings\n",
     "\n",
@@ -426,7 +434,9 @@
     "        validate_assignment = True\n",
     "\n",
     "\n",
-    "display(Foo(bar=\"   hello SciPy!      \"))"
+    "display(\n",
+    "    Foo(bar=\"   hello SciPy!      \"),\n",
+    ")"
    ]
   },
   {
@@ -439,7 +449,9 @@
    },
    "outputs": [],
    "source": [
-    "display(Foo(bar=\"    baz   \"))"
+    "display(\n",
+    "    Foo(bar=\"    baz   \"),\n",
+    ")"
    ]
   },
   {
@@ -447,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that in this example the provided string has 10 characters, surpassing the 8 character minimum, but after stripping leading and trailing whitespaces, the string only has 3 characters. Thus a validation error arises exclaiming that `bar` is not at least characters long."
+    "Notice that in this example the provided string has 10 characters, surpassing the 8 character minimum, but after stripping leading and trailing whitespaces, the string only has 3 characters. Thus a validation error arises exclaiming that `bar` is not at least 8 characters long."
    ]
   },
   {
@@ -477,7 +489,7 @@
     "\n",
     "Continuing our example with the `User` class, suppose a user wants to login to a service and we want to validate the provided credentials. We could write a function `validate_credentials` to compare a user provided username/password pair to a list of `User` instances. We may want to be sure the provided type are of the expected types.\n",
     "\n",
-    "DISCLAIMER: The following is **not** intended to be used as a model for sensitive date storage and/or credential authentication. This example serves only to demonstrate the usage of the `validate_arguments` decorator."
+    "**DISCLAIMER:** The following is **not** intended to be used as a model for sensitive date storage and/or credentials authentication. This example serves only to demonstrate the usage of the `validate_arguments` decorator."
    ]
   },
   {
@@ -516,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's create a database of users, but we will not create any `User` classes. Each user will just be a dictionary that conforms to the `User` format."
+    "Now let's create a database of users, but we will not create any `User` classes. Each user will just be a dictionary that conforms to the `User` model definition."
    ]
   },
   {
@@ -571,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We successfully logged in! But notice the magic that happened here. Our database of users is just a list of dictionaries. None of the users in our database have `username` or `password1` attributes, yet `validate_credentials` was able to access these attributes without raising an exception. Evidently the `validate_arguments` decorator coerced the list of dictionaries into a list of `User` instances. Presumably, if we then alter our database to include invalid users, then we should get a validation error when we try to call `validate_credentials`. Let's see if we are right..."
+    "We successfully logged in! But notice the magic that happened here. Our database of users is just a list of dictionaries. None of the users in our database have `username` or `password1` attributes, yet our `validate_credentials` function was able to access these attributes without raising an exception. Evidently the `validate_arguments` decorator coerced the list of dictionaries into a list of `User` instances. Presumably, if we then alter our database to include invalid users, then we should get a validation error when we try to call `validate_credentials`. Let's see if we are right..."
    ]
   },
   {
@@ -606,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So even though we provided the same, valid username and password, the function did not execute and raised a validation error because it could not coerce the list of registered user dictionaries into a list of `User` instances.\n",
+    "So even though we provided the same, valid username and password, the function did not complete and instead raised a validation error because it could not coerce the list of registered user dictionaries into a list of `User` instances.\n",
     "\n",
     "The `validate_arguments` decorator can provide peace of mind when developing code, because you know the input arguments will have the specified type inside the function body. As with any validation, this does take time so the drawback is a decrease in performance. Though, in practice, this drop in speed is almost never important.\n",
     "\n",
@@ -638,7 +650,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scipy-2023-pydantic-tutorial",
    "language": "python",
    "name": "python3"
   },
