update notebook 4 and fix typos

--- a/notebooks/4-serialisation-and-deserialisation.ipynb
+++ b/notebooks/4-serialisation-and-deserialisation.ipynb
@@ -14,11 +14,9 @@
     "* Serialize Pydantic models to from JSON / YAML\n",
     "* Deserialize Pydantic models to from JSON / YAML\n",
     "* Implementing JSON encoders for custom types\n",
-    "* Fields and extending schema definitions\n",
     "* Config of serialization, excluding and including fields\n",
-    "* Performance remarks for serialization\n",
     "\n",
-    "In order to make use of Pydantic models we will need to get data in and/or out of instances of our models. This is known as deserialization and serialization, respectively. Pydantic was originally designed with the primary use case being web development where data is frequently serialized and deserialized in order to send and receive data between client and server. But Pydantic models can be useful in many other situations including, but not limited to, configuration files and data storage. The native Python serialization protocol is the pickle format, which is compatible with Pydantic, but pickling only works in a Python only system. If interfacing with other systems, pickling may not be possible. Furthermore, you may not always have control of the data files you need to validate. Common file formats used in the Python ecosystem are JSON (Javascript object notation), YAML (yet another markup language), and TOML (Tom's obvious, minimal language). Before we see examples of each of these, let's first create a function that takes in a serialization function and a deserialization function. The function will serialize a global data dict to string and print the string. It will then deserialize the string back to a Python object and print the object."
+    "In order to make use of Pydantic models we will need to get data in and/or out of instances of our models. This is known as deserialization and serialization, respectively. Pydantic was originally designed with the primary use case being web development where data is frequently serialized and deserialized in order to send and receive data between client and server. But Pydantic models can be useful in many other situations including, but not limited to, configuration files and data storage. The native Python serialization protocol is the pickle format, which is compatible with Pydantic, but pickling only works in a pure Python system. If interfacing with other systems, pickling may not be possible. Furthermore, you may not always have control of the data files you need to validate. Common file formats used in the Python ecosystem are JSON (Javascript object notation), YAML (yet another markup language), and TOML (Tom's obvious, minimal language). Before we see examples of each of these, let's first create a function that takes in a serialization function and a deserialization function. The function will serialize a global data dict to string and print the string. It will then deserialize the string back to a Python object and print the object."
    ]
   },
   {
@@ -73,7 +71,7 @@
    "source": [
     "**JSON**\n",
     "\n",
-    "Python has native JSON support in the standard library module `json`. Deserialization can be accomplished using `json.load` and `json.loads`, with the former taking a file pointed (an object a `.read()` method) and the latter taking a `str`, `bytes`, or `bytearray`. The analogous counterpoints (serialization) can be accomplished with `json.dump` and `json.dumps`, respectively."
+    "Python has native JSON support in the standard library module `json`. Deserialization can be accomplished using `json.load` and `json.loads`, with the former taking a file pointer (an object with a `.read()` method) and the latter taking a `str`, `bytes`, or `bytearray`. The analogous counterparts (serialization) can be accomplished with `json.dump` and `json.dumps`, respectively."
    ]
   },
   {
@@ -621,17 +619,6 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "d64fc6af",
-   "metadata": {},
-   "source": [
-    "## Fields and extending schema definitions\n",
-    "\n",
-    "???"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
    "id": "23e3cc9b",
    "metadata": {},
    "source": [
@@ -651,10 +638,6 @@
    "id": "888575b5",
    "metadata": {},
    "source": [
-    "## Performance remarks for serialization\n",
-    "\n",
-    "???\n",
-    "\n",
     "## Exercise 4\n",
     "\n",
     "Now let's build upon the previous exercise and compare this year's weather in Austin, TX to historical trends. The file located at `exercises_data/noaa_long_term_avgs.json` contains long-term daily averages and standard deviations of temperature data for Austin, TX (the airport weather station). This data was obtained from https://www.ncdc.noaa.gov/cdo-web/webservices/v2. You should examine the data and build a Pydantic model capable of parsing and validating this file (e.g. using `pydantic.BaseModel.parse_file`). Your model should also have methods to compute the upper and lower bounds of each daily average based on the standard deviations provided in the data.\n",
@@ -664,21 +647,13 @@
     "* Take the 2023 data obtained in Exercise 3 and compute daily averages with upper and lower bounds.\n",
     "* Plot the two datasets on top of one another and compare this years temperature data to the long-term averages.\n",
     "* Create yet another Pydantic model to combine the two datasets into one. The design of this structure is up to you, but it must be a Pydantic model.\n",
-    "* Serialize the combined dataset to disk (e.g. using `pydantic.BaseModel.dict` or ``pydantic.BaseModel.json`)."
+    "* Serialize the combined dataset to disk (e.g. using `pydantic.BaseModel.dict` or `pydantic.BaseModel.json`)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28b998e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "scipy-2023-pydantic-tutorial",
    "language": "python",
    "name": "python3"
   },
