update notebook 5 and fix typos

--- a/notebooks/5-summary-and-conclusion.ipynb
+++ b/notebooks/5-summary-and-conclusion.ipynb
@@ -12,7 +12,7 @@
     "# Summary and Conclusion\n",
     "\n",
     "## Summary\n",
-    "In this tutorial we have demonstrated how Pydantic can improve the user experience of scientific Python software. In this introductional tutorial we have covered:\n",
+    "In this tutorial we have demonstrated how Pydantic can improve the user experience of scientific Python software. In this introductory tutorial we have covered:\n",
     "\n",
     "- How to define a Pydantic model and adjust its configuration to disallow extra fields and enable strict validation\n",
     "- We have seen an overview of the atomic types supported and an overview of the most common advanced types\n",
@@ -23,13 +23,13 @@
     "This sets the foundation for using Pydantic in your own projects.\n",
     "\n",
     "## Some General Thoughts\n",
-    "Pydantic is not meant to introduce static typing to Python \"trough the backdoor\". So it does make sense to use it for every small script, that you only use for yourself or share with a few colleagues. However, if you are writing a larger application, that is used by many people, or an application that is re-used with many different inout configurations, Pydantic will be a great tool to improve the safety of use and user experience of your application. Personally we think Pydantic should be used where the type conversion and validation brings the most value. \n",
+    "Pydantic is not meant to introduce static typing to Python \"through the backdoor\". So it may not make sense to use it for every small script, that you only use for yourself or share with a few colleagues. However, if you are writing a larger application, that is used by many people, or an application that is re-used with many different inout configurations, Pydantic will be a great tool to improve the safety of use and user experience of your application. Personally we think Pydantic should be used where the type conversion and validation brings the most value. \n",
     "\n",
     "As we listed in the title of this tutorial, we consider the most important use cases of Pydantic to be:\n",
     "\n",
     "\n",
     "- **Data Structures**: Pydantic is a great tool to define and validate data structures. Pydantic was developed for representation of web data, and this is its biggest strength. Large hierarchical datasets, represented e.g. in JSON\n",
-    "can be read from disk and validated. This makes sure any application runs with validated data and does not fail at later stage. More generally this is useful for the representation and validation of meta data. Many scientific data formats support associated meta data for the actual (binary) data, such as FITS, HDF5, ASDF etc. \n",
+    "can be read from disk and validated. This makes sure any application runs with validated data and does not fail at a later stage. More generally this is useful for the representation and validation of meta data. Many scientific data formats support associated meta data for the actual (binary) data, such as FITS, HDF5, ASDF, etc. \n",
     "\n",
     "- **Configuration**: Pydantic is a great tool to define and validate the structure of configuration files. This is especially true for larger applications, where the configuration is complex and the user is not familiar with the application. Pydantic can help to avoid typos and other mistakes in the configuration file. It can also help to avoid the need to read the documentation to understand the configuration file, especially the configuration includes deafult values. It is also a way to programmatically define JSON schemas and fields. Which might be easier to maintain than a JSON schema file.\n",
     "\n",
@@ -46,7 +46,7 @@
     "\n",
     "## A Note On Pydantic v2.0\n",
     "\n",
-    "On June 30th 2023 Pydantic v2.0 was released. It was a bit to short notice to include it in this tutorial. However, it is a major release and it is worth to mention it here. Pydantiv v2.0 inlcudes a major refactoring of the actual validation code, which is now fully implemented in Rust and exposed to Python, which makes Pydantic much faster. This can be relevant e.g. for large data sets.\n",
+    "On June 30th 2023 Pydantic v2.0 was released. It was a bit to short notice to include it in this tutorial. However, it is a major release and it is worth mentioning it here. Pydantiv v2.0 inlcudes a major refactoring of the actual validation code, which is now fully implemented in Rust and exposed to Python, which makes Pydantic much faster. This can be relevant e.g. for large data sets.\n",
     "\n",
     "It is supposed to be mostly backwards compatible. However, there are some changes that might break existing code. The most important changes affecting things learned in this tutorial are:\n",
     "\n",
@@ -79,8 +79,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "scipy-2023-pydantic-tutorial",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
