update notebook 3 part 1 and fix typos

--- a/notebooks/3-advanced-usage-part-I.ipynb
+++ b/notebooks/3-advanced-usage-part-I.ipynb
@@ -571,7 +571,23 @@
    "source": [
     "### Other Types\n",
     "\n",
-    "There is a variety of other useful types built into pydantic. We have e.g. already mentioned the `Color` type above. Most of these types are mostly relevant for web development but, non-the-less, it is good to know that they exist. For an overview of those types see https://docs.pydantic.dev/1.10/usage/types/#pydantic-types and also https://github.com/pydantic/pydantic-extra-types (unreleased)."
+    "Pydantic has a few useful factory functions for building types that have additional validations built in. For example, `pydantic.conint` is a function with parameters that allow you to build a constrained integer. This could be used to create a `MovieRating` type that only allows integers from 0 to 100:\n",
+    "```python\n",
+    "from pydantic import BaseModel, conint\n",
+    "\n",
+    "MovieRating = conint(ge=0, le=100)\n",
+    "\n",
+    "class Movie(BaseModel):\n",
+    "    name: str\n",
+    "    year: int\n",
+    "    rating: MovieRating\n",
+    "```\n",
+    "\n",
+    "On top of the normal integer validations, `Movie` will throw a validation error if the value provided is an integer less than 0 or greater than 100.\n",
+    "\n",
+    "Other useful type factories exist, such as `conlist`, `confloat`, `constr`, `condate`, and more. Pydantic has also exposed specific instantiations of some of these type factories that are commonly used. A few examples include, but are not limited to, `NegativeInt`, `NonNegativeInt`, `PositiveInt`, `NonPositiveInt`, and the `float` counterparts. You can guess how each of these are created from `conint` and `confloat`.\n",
+    "\n",
+    "There are a variety of other useful types built into pydantic. We have already mentioned several above. Most of the types not mentioned above are mostly relevant for web development but it is nonetheless good to know that they exist. For an overview of those types see https://docs.pydantic.dev/1.10/usage/types/#pydantic-types and also https://github.com/pydantic/pydantic-extra-types (unreleased)."
    ]
   },
   {
