Adapt exercise description

--- a/notebooks/3-advanced-usage-part-I.ipynb
+++ b/notebooks/3-advanced-usage-part-I.ipynb
@@ -1066,6 +1066,46 @@
     "print(line_global_color.color)\n",
     "print(other_line_global_color.color)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "\n",
+    "\n",
+    "We will be using the [open-meteo](https://open-meteo.com/en/docs) free weather API to make a request to the <https://api.open-meteo.com/v1/forecast> endpoint. We will fetch temperature data for Austin, TX on an hourly cadence for all of 2023.\n",
+    "\n",
+    "To do this we will use the [requests](https://requests.readthedocs.io/en/latest/) third-party Python library. For anyone new to `requests`, here is a quick primer. Imagine you want to receive the response from the example URL: <https://example.com/api/v2/foo?bar=1&bap=scipy2023&baz=false>. Then the response can be obtained with:\n",
+    "```python\n",
+    "import requests\n",
+    "\n",
+    "api_endpoint = \"https://example.com/api/v2/foo\"\n",
+    "params = {\"bar\": 1, \"bap\": \"scipy2023\", \"baz\": False}\n",
+    "response = requests.get(url=api_endpoint, params=params)\n",
+    "print(response.content)\n",
+    "```\n",
+    "The requests library has many additional features that you can find in the documentation linked above, but for this exercise, this should be all you need.\n",
+    "\n",
+    "Task: Write a script that makes a request to the open-meteo API enpoint with the following constraints:\n",
+    "\n",
+    "* Use Austin, TX as the location. Hint: you may need to look up the latitude and longitude.\n",
+    "* You should request the hourly temperature 2m above ground.\n",
+    "* Use GMT as the timezone.\n",
+    "* The range of dates is from the beginning of 2023 to today.\n",
+    "\n",
+    "You should create a Pydantic model that parses and validates the response from the request. Your Pydantic model should be precise (i.e. include as many validations and specific type hints as possible) but also flexible (examples may include (a) allowing for accepting either celsius or fahrenheit or (b) allowing for either ISO8601 or unix time). Your model should also be hierarchical to account for the nested structure of the API response. In order to understand the expected response needed to build your model, you may want to spend a few minutes reading the open-meteo documentation (linked above) and/or playing around with the open-meteo UI (also at the linked documentation).\n",
+    "\n",
+    "After receiving the response, compute the daily average temperature and plot it as a function of time. You can use any plotting library you like, but we recommend [matplotlib](https://matplotlib.org/stable/index.html) and for the averaging you could use e.g. [pandas](https://pandas.pydata.org/).\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
